# cloudflare-register

./: .editorconfig  .env.example  .gitignore  AGENTS_START_HERE.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.plan/: 0000-TOC.md  0001-Workflow.md  0002-Build-Status.md  0100-Security-Overview.md  0200-Architecture.md  0300-Implementation-Tasks.md  0400-Testing.md  0500-Operations.md  0700-Risks.md
contrib/freebsd/: Makefile  pkg-descr  pkg-plist
contrib/freebsd/files/: cloudflare_ddns.in
debian/: changelog  cloudflare-register.cloudflare-ddns.service  conffiles  control  copyright  dirs  install  postinst  prerm  rules
deploy/: cloudflare-ddns.rc  cloudflare-ddns.service
scripts/: inject_license.py  secret-scan
src/cloudflare_register/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  ip_detection.py  logging_setup.py  persistence.py  sync.py
src/cloudflare_register/domain/: __init__.py  models.py
src/cloudflare_register/providers/: __init__.py  base.py  cloudflare.py  factory.py
src/cloudflare_register/services/: __init__.py  host_service.py  interface_service.py  sync_service.py
src/cloudflare_register/tui/: __init__.py  app.py
src/cloudflare_register/web/: __init__.py  app.py  csrf.py
src/cloudflare_register/web/templates/: base.html  index.html  login.html  wizard.html
tests/: __init__.py  conftest.py  test_cli.py  test_cli_extended.py  test_config.py  test_csrf.py  test_ip_detection.py  test_persistence.py  test_providers_cloudflare.py  test_providers_factory.py  test_sync.py  test_web.py
tests/e2e_web/: __init__.py  conftest.py  test_login_flow.py  test_wizard.py
tests/test_services/: test_host_service.py  test_interface_service.py  test_sync_service.py
