[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudflare-register"
version = "0.2.0"
description = "Smart DynDNS service for Cloudflare with multi-zone, dual-stack, and state synchronization"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Mark LaPointe", email = "mark@cloudbsd.org" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: BSD License",
  "Operating System :: POSIX :: BSD :: FreeBSD",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: DNS",
  "Topic :: System :: Networking",
]
keywords = ["dyndns", "cloudflare", "dns", "ipv6", "fastapi"]

# Runtime dependencies
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "jinja2>=3.1,<4.0",
  "python-multipart>=0.0.9,<1.0",
  "httpx>=0.27,<1.0",
  "python-jose[cryptography]>=3.3,<4.0",
  "bcrypt>=4.1,<5.0",
  "click>=8.1,<9.0",
  "itsdangerous>=2.2,<3.0",
]

# Optional groups
[project.optional-dependencies]
tui = ["textual>=0.79,<1.0", "rich>=13.7,<14.0"]
test = [
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "pytest-cov>=5.0,<6.0",
  "respx>=0.21,<1.0",
]
e2e = [
  "playwright>=1.45,<2.0",
  "pytest-playwright>=0.5,<1.0",
]
lint = [
  "ruff>=0.5,<1.0",
  "mypy>=1.10,<2.0",
]
all = ["cloudflare-register[tui,test,e2e,lint]"]


[project.scripts]
cloudflare-register = "cloudflare_register.cli:main"
cr-sync = "cloudflare_register.cli:sync_once"

[project.urls]
Homepage = "https://github.com/cloudbsdorg/cloudflare-register"
Documentation = "https://github.com/cloudbsdorg/cloudflare-register/blob/main/AGENTS_START_HERE.md"
Issues = "https://github.com/cloudbsdorg/cloudflare-register/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cloudflare_register*"]
namespaces = false

[tool.setuptools.package-data]
cloudflare_register = ["py.typed", "web/templates/*.html", "tui/*.tcss"]

# ----- Tooling configuration -----

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["build", "dist", ".venv", "venv"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "UP", # pyupgrade
  "S",  # flake8-bandit (security)
  "N",  # pep8-naming
  "C4", # flake8-comprehensions
  "SIM", # flake8-simplify
]
ignore = [
  "S101",  # Use of `assert` detected (OK in tests)
  "S105",  # Possible hardcoded password (false positives in tests)
  "S106",  # hardcoded-password (sample configs only)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "B011"]
"contrib/**" = ["ALL"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = false  # Library code, third-party has no stubs
ignore_missing_imports = true
exclude = ["build/", "dist/", ".venv/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--tb=short",
  "--cov=cloudflare_register",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--ignore=tests/e2e_web",
]
markers = [
  "e2e: end-to-end browser tests; run with `make test-e2e`",
]
asyncio_mode = "auto"
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:jose.*",
  "ignore::DeprecationWarning:passlib.*",
  "ignore::starlette.exceptions.StarletteDeprecationWarning",
  "ignore::DeprecationWarning:pytest_asyncio.*",
]
[tool.coverage.run]
branch = true
source = ["cloudflare_register"]
omit = [
  "*/tests/*",
  "*/contrib/*",
  "*/e2e_web/*",
  "*/tui/app.py",
]


[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
